Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-excalidraw
    meta.helm.sh/release-namespace: excalidraw
  labels:
    app.kubernetes.io/instance: my-excalidraw
    app.kubernetes.io/name: excalidraw
    app.kubernetes.io/version: v0.15.0
  name: my-excalidraw-service
  namespace: excalidraw
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: my-excalidraw
    app.kubernetes.io/name: excalidraw
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
