excalidraw-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: excalidraw
  name: excalidraw
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    io.kompose.service: excalidraw
