service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excalidraw
  name: excalidraw
  namespace: default
spec:
  type: NodePort
  selector:
    app: excalidraw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32600  # Puedes ajustar este puerto según tu preferencia
