Virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-excalidraw
  namespace: excalidraw
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /  # Cambia esto al prefijo de URL que desees
      route:
        - destination:
            host: my-excalidraw.excalidraw.svc.cluster.local
            port:
              number: 80
